[project]
name = "ml_test"
version = "0.0.1"
requires-python = "~=3.9"
dependencies = [
  "numpy~=1.21.2",
  "pandas>=1.3,<2",
  "scipy~=1.7.0",
  "matplotlib~=3.4",
  "scikit-learn~=1.0.0",
  "jupyterlab>=3.4.4",
  "torch~=1.9.0",
  "torchvision~=0.10.0",
  "mlxtend~=0.19.0",
  "tensorboard~=2.7.0",
  "pytorch_lightning~=1.4.0",
  "torchmetrics~=0.6.2",
  "torchtext~=0.10.0",
  "datasets~=1.11",
  "transformers>=4.9.1,<4.30",
  "networkx~=2.6.2",
  "torch_geometric~=2.0.2",
  "gym~=0.20",
  "pytorch-ignite==0.5.1"
]

[dependency-groups]
dev = [
    "ipython",
]